# semicon-fab-assistant

./: .env.example  .gitignore  LICENSE  README.md  config.py  docker-compose.yml  pyproject.toml  smoke_test.py
.streamlit/: config.toml
agent/: loop.py  loop_lg.py  schemas.py  tools.py  traces.py
app/: streamlit_app.py
docs/: learning-log.md
eval/: benchmark.jsonl  build_benchmark.py  compare_ablation.py  metrics.py  run_eval.py
ingest/: chunk.py  index.py
rag/: embeddings.py  retriever.py
scripts/: generate_data.py  smoke_agent.py  smoke_retrieval.py  taxonomy.py
tests/: test_generate_data.py  test_taxonomy.py
