[project]
name = "semicon-agent"
version = "0.1.0"
description = "Semniconductor maintenance agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.42.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.17",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
